--- a/server/public/index.html
+++ b/server/public/index.html
@@ -7,7 +7,7 @@
     <script src="./vendors/jquery.js"></script>
     <script src="./scripts/client.js"></script>
     <link rel="stylesheet" href="./styles/style.css">
-    <title>Server Side Inventory</title>
+    <title>Server Side Calculator</title>
 </head>
 <body>
     <h1>Server Side Calculator</h1>
