--- a/server/public/index.html
+++ b/server/public/index.html
@@ -17,7 +17,7 @@
             <button id = "subtract">-</button>
             <button id = "multiply">*</button>
             <button id = "divide">/</button>
-        <input type = "number" placeholder = "Second Input" id = "InputTwo"></input>
+        <input type = "number" placeholder = "Second Input" id = "inputTwo"></input>
             <button id = "equals">=</button>
             <button id = "clear">C</button>
     </section>
