--- a/server/public/index.html
+++ b/server/public/index.html
@@ -13,10 +13,10 @@
     <h1>Server Side Calculator</h1>
     <section>
         <input type = "number" placeholder = "Input" id = "inputOne"></input>
-            <button id = "add">+</button>
-            <button id = "subtract">-</button>
-            <button id = "multiply">*</button>
-            <button id = "divide">/</button>
+            <button id = "add" class = "inputThree">+</button>
+            <button id = "subtract" class = "inputThree">-</button>
+            <button id = "multiply" class = "inputThree">*</button>
+            <button id = "divide" class = "inputThree">/</button>
         <input type = "number" placeholder = "Second Input" id = "inputTwo"></input>
             <button id = "equals">=</button>
             <button id = "clear">C</button>
