Working on user input to adjust function

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -21,8 +21,10 @@
             <button id = "equals">=</button>
             <button id = "clear">C</button>
     </section>
-    <section id = "history">
+    <section>
+            <h2>Calculator History</h2>
                 <!-- Entered data will append here -->
+                <ul class = "history"></ul>
     </section>
 </body>
 </html>
