--- a/server/public/index.html
+++ b/server/public/index.html
@@ -13,11 +13,14 @@
     <h1>Server Side Calculator</h1>
     <section>
         <input type = "number" placeholder = "Input" id = "inputOne"></input>
-            <button id = "add" class = "inputThree">+</button>
-            <button id = "subtract" class = "inputThree">-</button>
-            <button id = "multiply" class = "inputThree">*</button>
-            <button id = "divide" class = "inputThree">/</button>
+
+            <button class = "inputThree">+</button>
+            <button class = "inputThree">-</button>
+            <button class = "inputThree">*</button>
+            <button class = "inputThree">/</button>
+
         <input type = "number" placeholder = "Second Input" id = "inputTwo"></input>
+
             <button id = "equals">=</button>
             <button id = "clear">C</button>
     </section>
