Info is now properly appending to dom

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -24,6 +24,9 @@
             <button id = "equals">=</button>
             <button id = "clear">C</button>
     </section>
+
+    <div id = "solution">The solution is: </div>
+
     <section>
             <h2>Calculator History</h2>
                 <!-- Entered data will append here -->
