--- a/server/public/index.html
+++ b/server/public/index.html
@@ -25,7 +25,7 @@
             <button id = "clear">C</button>
     </section>
 
-    <div id = "solution">The solution is: </div>
+    <div id = "solution"></div>
 
     <section>
             <h2>Calculator History</h2>
