Added some simple styling

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,19 +10,21 @@
     <title>Server Side Calculator</title>
 </head>
 <body>
+    <header class = "header-title">
     <h1>Server Side Calculator</h1>
+    </header>
     <section>
-        <input type = "number" placeholder = "Input" id = "inputOne"></input>
+        <input class = "inputs" type = "number" placeholder = "Input" id = "inputOne"></input>
 
-            <button class = "inputThree">+</button>
-            <button class = "inputThree">-</button>
-            <button class = "inputThree">*</button>
-            <button class = "inputThree">/</button>
+            <button class = "inputs inputThree">+</button>
+            <button class = "inputs inputThree">-</button>
+            <button class = "inputs inputThree">*</button>
+            <button class = "inputs inputThree">/</button>
 
-        <input type = "number" placeholder = "Second Input" id = "inputTwo"></input>
+        <input class = "inputs" type = "number" placeholder = "Second Input" id = "inputTwo"></input>
 
-            <button id = "equals">=</button>
-            <button id = "clear">C</button>
+            <button class = "inputs" id = "equals">=</button>
+            <button class = "inputs" id = "clear">C</button>
     </section>
 
     <div id = "solution"></div>
